Fix footer too big on mobile devices

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -20,6 +20,9 @@
 
 @theme {
 	--font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif;
+	--breakpoint-xs: 30rem;
+	--breakpoint-2xl: 100rem;
+	--breakpoint-3xl: 120rem;
 }
 
 @layer base {
